    - qgraph.semModel
    - qgraph.lavaan
    - qgraph.panel
    - qgraph.svg
    - qgraph.efa
  o The following functionality has been *removed* from qgraph:
    - tooltips
    - overlay
    - overlaySize
  o Added 'res' to the allArgs list
  o Added 'node.label.offset' and 'node.label.position' arguments to control the position of node labels (thanks to mihaiconstantin)
  o Some small bugfixes


Changes in Verson 1.5.1
  o Added a criterion argument to ggmModSelect to allow for other criteria to be used.
  o The centrality help page now correctly describes "InExpectedInfluence" and "OutExpectedInfluence"

Changes in Verson 1.5
  o Added the 'flow' function to make flow plots
  o Fade now accepts numeric values, setting the exact fading (per edge)
  o Added theme = "gimme", defaulting to posCol = "red", negCol = "blue", parallelEdge = TRUE and fade = FALSE
  o Added the argument 'title.cex'
  o centrality() now also returns InExpectedInfluence and OutExpectedInfluence
  o The 'include' argument in centralityPlot and clusteringPlot can now also be used to re-order the facets of the plot.
  o Added the orderBy argument to centralityPlot()
  o Added the 'threshold' argument to 'EBICglasso', which can be used to threshold weak edges, ensuring high specificity.
      o EBICglasso will now return a warning for when a dense network is selected
  o Added the 'ggmModSelect' function, which can be used for unregularized GGM model search
  o ggmFit now treats absolute edges under sqrt(.Machine$double.eps) as zeroes
  o Fixed a bug where graph = "pcor" with threshold = "sig" required column/row names for the input correlation matrix

Changes in Version 1.4.4
  o Fixed a bug in EBICglasso in which only nLambda = 100 was supported
  o EBICglasso now gives a warning if the densest (lowest lambda) network is selected
  o EBICglasso now gives a message if the empty network is selected
  o qgraph() now supports 'gamma' as alias for 'tuning'