@@ -1,7 +1,7 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-rcpp_hello_world <- function() {
-    .Call(`_qgraph_rcpp_hello_world`)
+qgraph_layout_Cpp <- function(pniter, pvcount, pecount, maxdelta, parea, pcoolexp, prepulserad, Ef, Et, W, xInit, yInit, Cx, Cy) {
+    .Call(`_qgraph_qgraph_layout_Cpp`, pniter, pvcount, pecount, maxdelta, parea, pcoolexp, prepulserad, Ef, Et, W, xInit, yInit, Cx, Cy)
 }
 
