@@ -1,20 +1,0 @@
-#include <stdlib.h> // for NULL
-#include <R_ext/Rdynload.h>
-
-/* FIXME: 
-Check these declarations against the C/Fortran source code.
-*/
-
-/* .C calls */
-extern void qgraph_layout_fruchtermanreingold_R_old(void *, void *, void *, void *, void *, void *, void *, void *, void *, void *, void *, void *, void *, void *);
-
-static const R_CMethodDef CEntries[] = {
-  {"qgraph_layout_fruchtermanreingold_R_old", (DL_FUNC) &qgraph_layout_fruchtermanreingold_R_old, 14},
-  {NULL, NULL, 0}
-};
-
-void R_init_qgraph(DllInfo *dll)
-{
-  R_registerRoutines(dll, CEntries, NULL, NULL, NULL);
-  R_useDynamicSymbols(dll, FALSE);
-}
